--- a/index.html
+++ b/index.html
@@ -5,28 +5,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Taskinator</title>
+    <title>To-Do</title>
     <link rel="stylesheet" href="./assets//css/style.css">
 </head>
 
 <body>
     <header>
-        <h1 class="page-title">Taskinator</h1>
-        <p>Click the button below to add a new task!</p>
+        <h1 class="page-title">To-Do App!</h1>
+        <p>Click the button below to add a new To-Do!</p>
         <form id="task-form">
             <div class="form-group">
                 <input type="text" name="task-name" placeholder="Enter Task Name" />
             </div>
             <div class="form-group">
                 <select name="task-type" class="select-dropdown">
-                    <option value="" disabled selected>Pick a task type</option>
-                    <option value="Print">Print</option>
-                    <option value="Web">Web</option>
-                    <option value="MObile">Mobile</option>
+                    <option value="" disabled selected>Pick a task priority</option>
+                    <option value="high">High</option>
+                    <option value="medium">Medium</option>
+                    <option value="low">Low</option>
                 </select>
             </div>
             <div class="form-group">
-                <button class="btn" id="save-task" type="submit">Add Task</button>
+                <button class="btn" id="save-task" type="submit">Add</button>
             </div>
 
         </form>
@@ -50,7 +50,7 @@
             </ul>
         </section>
     </main>
-    <footer>&copy;2020 by Taskinator</footer>
+    <footer>&copy;2022 by Micheal Jw Ellis Sr</footer>
     <script src="./assets/js/script.js"></script>
 </body>
 
